--- a/LeagueTL.html
+++ b/LeagueTL.html
@@ -1,1 +1,14 @@
-Design a tierlist for league of legends jg season14
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LeagueTL</title>
+    <link rel="stylesheet" href="LeagueTL.css">
+</head>
+<body>
+
+    <h1>A league of legends tierlist for jungle mains. (Currently in progress)</h1>
+    
+</body>
+</html>
