--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
     <meta name="author" content="Andrew Park">
     <title>Andrew's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+
+<!-- mobile/tablet scaling to do later 
+    <style>
+        @media only screen and (max-width:800px) {
+          /* For tablets: */
+        .main {
+            width: 80%;
+            padding: 0;
+        }
+        .right {
+            width: 100%;
+        }
+        }
+        @media only screen and (max-width:500px) {
+          /* For mobile phones: */
+        .menu, .main, .right {
+            width: 100%;
+        }
+        }
+        </style>
+-->
+
 </head>
 <body>
 
